tests/baselines/reference/asyncGenerators.classMethod.7.es2017.errors.txt
tests/cases/conformance/asyncGenerators/es2017/classMethods/asyncGenerators.classMethod.7.es2017.ts(2,19): error TS1163: A 'yield' expression is only allowed in a generator body.
tests/cases/conformance/asyncGenerators/es2017/classMethods/asyncGenerators.classMethod.7.es2017.ts(2,19): error TS2523: 'yield' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/asyncGenerators/es2017/classMethods/asyncGenerators.classMethod.7.es2017.ts (2 errors) ====
    class C {
        async * f(a = yield) {}
                      ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
                      ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
    }